tdf#125894: DOCX: import tracked changes in frames

Tracked changes weren't imported in frames, losing also
the actual text content: also tracked deletion reappeared
as normal text here, not only the tracked insertions.

Change-Id: I5fc8135cfb7402ad71c5c24eae606aa7ed707dfc